Added new module to centralize unit tests
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@427 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.tms.domain/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.tms.domain/pom.xml
@@ -19,6 +19,9 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.framework.test</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -41,12 +44,14 @@
             <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
         <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
+            <groupId>org.aspectj</groupId>
+            <artifactId>com.springsource.org.aspectj.weaver</artifactId>
+            <version>1.6.5.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
