--- a/OpenWMS-common/trunk/pom.xml
+++ b/OpenWMS-common/trunk/pom.xml
@@ -39,6 +39,19 @@
         <plugins>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <showSuccess>false</showSuccess>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
     <distributionManagement>
         <repository>
             <id>Rudi-Releases</id>
@@ -63,6 +76,7 @@
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.framework.test</artifactId>
                         <version>${project.version}</version>
+                        <type>test-jar</type>
                         <scope>test</scope>
                     </dependency>
                     <dependency>
@@ -152,13 +166,21 @@
                         <scope>test</scope>
                     </dependency>
                     <dependency>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                        <version>4.5</version>
+                        <groupId>org.junit</groupId>
+                        <artifactId>com.springsource.org.junit</artifactId>
+                        <version>4.7.0</version>
                         <scope>test</scope>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit</groupId>
+                    <artifactId>com.springsource.org.junit</artifactId>
+                    <version>4.7.0</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 
