2886764 Updated OSGi manifest headers
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@477 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.common.service.spring/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.common.service.spring/pom.xml
@@ -20,7 +20,7 @@
     <name>${project.artifactId}</name>
     <build>
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>com.springsource.bundlor</groupId>
                 <artifactId>com.springsource.bundlor.maven</artifactId>
                 <version>1.0.0.M6</version>
@@ -34,6 +34,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
         </plugins>
     </build>
     <dependencies>
