--- a/OpenWMS-common/trunk/org.openwms.client.flex.wrapper/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.wrapper/pom.xml
@@ -86,6 +86,11 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>com.springsource.freemarker</artifactId>
+            <scope>compile</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.spring-library</artifactId>
