--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/pom.xml
@@ -33,7 +33,7 @@
                         <path>${basedir}/src/main/flex</path>
                     </sourcePaths>
                     <services>${basedir}/src/main/resources/flex/services-config.xml</services>
-                    <contextRoot>openwms</contextRoot>
+                    <contextRoot>org.openwms.client.flex.wrapper</contextRoot>
                     <sourceFile>org/openwms/web/flex/client/view/StartScreen.mxml</sourceFile>
                     <warnings>
                         <arrayTostringChanges>true</arrayTostringChanges>
