2891581 Webapp is now accessing service and integration layer, PU must still be configured
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@481 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.client.flex.wrapper/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.wrapper/pom.xml
@@ -18,6 +18,18 @@
         <sourceDirectory>src/main</sourceDirectory>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+          <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <finalName>${project.artifactId}</finalName>
+                    <archive>
+                        <manifestFile>
+                            src/main/webapp/META-INF/MANIFEST.MF
+                        </manifestFile>
+                    </archive>
+                </configuration>
+            </plugin>
            <plugin>
                 <groupId>org.sonatype.flexmojos</groupId>
                 <artifactId>flexmojos-maven-plugin</artifactId>
@@ -126,6 +138,10 @@
             <groupId>org.graniteds</groupId>
             <artifactId>granite-hibernate</artifactId>
             <version>${granite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>com.springsource.org.eclipse.persistence</artifactId>
         </dependency>
     </dependencies>
 </project>
