2891581 Webapp is now accessing service and integration layer, PU must still be configured
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@482 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/pom.xml
@@ -33,7 +33,7 @@
                         <path>${basedir}/src/main/flex</path>
                     </sourcePaths>
                     <services>${basedir}/src/main/resources/flex/services-config.xml</services>
-                    <contextRoot>org.openwms.client.flex.wrapper</contextRoot>
+                    <contextRoot>openwms</contextRoot>
                     <sourceFile>org/openwms/web/flex/client/view/StartScreen.mxml</sourceFile>
                     <warnings>
                         <arrayTostringChanges>true</arrayTostringChanges>
